--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "node-sass": "^7.0.3",
-    "sass": "^1.57.0"
+    "postcss": "^8.4.20",
+    "sass": "^1.57.0",
+    "tailwindcss": "^3.2.4"
   }
 }
